# quickfig

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.githooks/: commit-msg
.github/workflows/: tests.yml
bin_test/: Cargo.toml  QUICKFIG_TEST.json
bin_test/src/: config_tests.rs  main.rs  usage_tests.rs  utils.rs
quickfig/: Cargo.toml
quickfig/src/: lib.rs
quickfig_core/: Cargo.toml
quickfig_core/src/: allowed_type.rs  config.rs  field.rs  lib.rs
quickfig_derive/: Cargo.toml
quickfig_derive/src/: lib.rs
scripts/: check_bump.fish  check_bump.sh  execute_bump.fish  execute_bump.sh  release.fish  release.sh
