# /quickfig/Cargo.toml
[workspace]
resolver = "3"
# cargo test --workspace to test all members including bin_test
members = [
  "bin_test",
  "quickfig",
  "quickfig_core",
  "quickfig_derive",
]
# default (without --workspace) excludes bin_test
default-members = [
  "quickfig",
  "quickfig_core",
  "quickfig_derive",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["fluxdiv <156196590+fluxdiv@users.noreply.github.com>"]
description = "Quickfig: Replace boilerplate in apps that read from user configuration files"
license = "MIT"
repository = "https://github.com/fluxdiv/quickfig"
# exclude = ["bin_test", "bin_test/**"]

[workspace.dependencies]
anyhow = "1.0.98"
syn = { version = "2.0.104", features = ["extra-traits"] }
proc-macro2 = "1.0.95"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["arbitrary_precision"] }
toml = "0.9.5"
quote = "1.0.40"
