[package]
name = "bin_test"
version = "0.1.0"
edition = "2024"
publish = false

# [[test]]
# name = "tests"
# path = "tests/main.rs"

[dependencies]
quickfig_core = { path = "../quickfig_core" }
quickfig_derive = { path = "../quickfig_derive" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "6.0.0"
