# quickfig/bin_test/Cargo.toml
[package]
name = "bin_test"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
# description.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
quickfig = { path = "../quickfig", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

