# quickfig/quickfig_derive/Cargo.toml
[package]
name = "quickfig_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quickfig_core = { path = "../quickfig_core" }
quote = { workspace = true }
syn = { workspace = true }
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
